--- a/index.html
+++ b/index.html
@@ -78,7 +78,11 @@
         }
         
         #netzero_box {
-            display: hidden;
+            display: hidden !important;
+        }
+        
+        #netzero_world {
+            display: hidden !important;
         }
     </style>
 
