--- a/index.html
+++ b/index.html
@@ -393,8 +393,8 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Olive
                             </div>
                         </div>
 
-                        <div id="netzero_box" class="col-md-6 animate-box" data-animate-effect="fadeInBottom">
-                            <div class="project" style="background-image: url(images/img-4.jpg); border-radius:10px;">
+                        <div class="col-md-6 animate-box" data-animate-effect="fadeInBottom">
+                            <div id="netzero_box" class="project" style="background-image: url(images/img-4.jpg); border-radius:10px;">
                                 <div class="desc">
                                     <div class="con">
                                         <h3><a href="https://netzero.world/">NetZero App</a></h3>
