--- a/index.html
+++ b/index.html
@@ -78,11 +78,11 @@
         }
         
         #netzero_box {
-            display: hidden !important;
+            display: none !important;
         }
         
         #netzero_world {
-            display: hidden !important;
+            display: none !important;
         }
     </style>
 
@@ -364,6 +364,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Olive
                                 <h2 class="colorlib-heading animate-box">My Projects</h2>
                             </div>
                         </div>
+                        <div style="margin-top:-30px; display:block; height:0px;"></div>
                         <div class="row row-bottom-padded-sm animate-box" data-animate-effect="fadeInLeft">
                             <div class="col-md-12">
                                 <p class="work-menu"><span><a id="startups-button" class="active" onclick="clickStartupButton();">Startups</a></span> <span><a id="internships-button" class="non-active" onclick="clickInternshipsButton();">Internships</a></span> <span><a id="hackathons-button" class="non-active" onclick="clickHackathonsButton();">Hackathons</a></span><span><a id="projects-button" class="non-active" onclick="clickProjectsButton();">Projects</a></span></p>
