--- a/index.html
+++ b/index.html
@@ -111,9 +111,9 @@
             document.getElementById("projects-button").classList.add("non-active");
 
             document.getElementById("netzero_box").style.display = "block";
-            document.getElementById("carbonly_box").style.display = "hidden";
+            document.getElementById("carbonly_box").style.display = "none";
             document.getElementById("netzero_world").style.display = "block";
-            document.getElementById("open_database").style.display = "hidden";
+            document.getElementById("open_database").style.display = "none";
         }
 
         function clickHackathonsButton() {
@@ -371,7 +371,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Olive
                             </div>
                         </div>
 
-                        <div id="carbonly_box" class="col-md-6 animate-box" data-animate-effect="fadeInRight">
+                        <div id="carbonly_box" class="col-md-6 animate-box" data-animate-effect="fadeInRight" style="border-radius:10px;">
                             <div class="project" style="background-image: url(images/img-2.jpg); border-radius:10px;">
                                 <div class="desc">
                                     <div class="con">
