--- a/index.html
+++ b/index.html
@@ -110,9 +110,9 @@
             document.getElementById("hackathons-button").classList.add("non-active");
             document.getElementById("projects-button").classList.add("non-active");
 
-            document.getElementById("netzero_box").style.display = "block";
+            document.getElementById("netzero_box").style.display = "block !important";
             document.getElementById("carbonly_box").style.display = "none";
-            document.getElementById("netzero_world").style.display = "block";
+            document.getElementById("netzero_world").style.display = "inline";
             document.getElementById("open_database").style.display = "none";
         }
 
