--- a/index.html
+++ b/index.html
@@ -99,6 +99,11 @@
             document.getElementById("projects-button").classList.add("non-active");
 
             document.getElementById("netzero_box").style.display = "none";
+            document.getElementById("carbonly_box").style.display = "none";
+            document.getElementById("netzero_world").style.display = "none";
+            document.getElementById("open_database").style.display = "none";
+
+            document.getElementById("netzero_box").style.display = "none";
             document.getElementById("carbonly_box").style.display = "inline";
             document.getElementById("netzero_world").style.display = "none";
             document.getElementById("open_database").style.display = "inline";
@@ -114,6 +119,11 @@
             document.getElementById("internships-button").classList.remove("non-active");
             document.getElementById("hackathons-button").classList.add("non-active");
             document.getElementById("projects-button").classList.add("non-active");
+
+            document.getElementById("netzero_box").style.display = "none";
+            document.getElementById("carbonly_box").style.display = "none";
+            document.getElementById("netzero_world").style.display = "none";
+            document.getElementById("open_database").style.display = "none";
 
             document.getElementById("netzero_box").style.display = "block !important";
             document.getElementById("carbonly_box").style.display = "none";
