--- a/index.html
+++ b/index.html
@@ -99,11 +99,6 @@
             document.getElementById("projects-button").classList.add("non-active");
 
             document.getElementById("netzero_box").style.display = "none";
-            document.getElementById("carbonly_box").style.display = "none";
-            document.getElementById("netzero_world").style.display = "none";
-            document.getElementById("open_database").style.display = "none";
-
-            document.getElementById("netzero_box").style.display = "none";
             document.getElementById("carbonly_box").style.display = "inline";
             document.getElementById("netzero_world").style.display = "none";
             document.getElementById("open_database").style.display = "inline";
@@ -119,11 +114,6 @@
             document.getElementById("internships-button").classList.remove("non-active");
             document.getElementById("hackathons-button").classList.add("non-active");
             document.getElementById("projects-button").classList.add("non-active");
-
-            document.getElementById("netzero_box").style.display = "none";
-            document.getElementById("carbonly_box").style.display = "none";
-            document.getElementById("netzero_world").style.display = "none";
-            document.getElementById("open_database").style.display = "none";
 
             document.getElementById("netzero_box").style.display = "block !important";
             document.getElementById("carbonly_box").style.display = "none";
@@ -430,25 +420,25 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Olive
                         </div>
 
                         <div class="row" style="border-radius:10px;">
-                            <a id="netzero_world" href="https://app.netzero.world/checkout.html">
-                                <div class="col-md-6 animate-box" data-animate-effect="fadeInLeft" style="border-radius:10px;">
-                                    <div class="project" style="background-image: url(images/img-1.jpg); border-radius:10px;">
-                                        <div class="desc">
-                                            <div class="con">
-                                                <h3><a href="https://app.netzero.world/checkout.html" style="text-transform:none">NETZERO CHECKOUT</a></h3>
-                                                <span>Co-Founder & Head of Product</span>
-                                                <div style="margin-top:45px; color:#fcfcfc; margin-bottom:45px;">
-                                                    Founded in October 2020 <br/> Currently Gathering Letters of Intent
-                                                </div>
+                            <!---- <a href="https://app.netzero.world/checkout.html">-->
+                            <div id="netzero_world" class="col-md-6 animate-box" data-animate-effect="fadeInLeft" style="border-radius:10px;">
+                                <div class="project" style="background-image: url(images/img-1.jpg); border-radius:10px;">
+                                    <div class="desc">
+                                        <div class="con">
+                                            <h3><a href="https://app.netzero.world/checkout.html" style="text-transform:none">NETZERO CHECKOUT</a></h3>
+                                            <span>Co-Founder & Head of Product</span>
+                                            <div style="margin-top:45px; color:#fcfcfc; margin-bottom:45px;">
+                                                Founded in October 2020 <br/> Currently Gathering Letters of Intent
+                                            </div>
 
-                                                <a href="https://app.netzero.world/checkout.html" style="border: 3px solid #fff; padding:10px; margin-top:85px !important; color:#fcfcfc !important; cursor:pointer; font-weight:700;">Check it Out! >>><i class="fas fa-arrow-circle-right"></i></a>
-                                                <!--<p class="icon">
+                                            <a href="https://app.netzero.world/checkout.html" style="border: 3px solid #fff; padding:10px; margin-top:85px !important; color:#fcfcfc !important; cursor:pointer; font-weight:700;">Check it Out! >>><i class="fas fa-arrow-circle-right"></i></a>
+                                            <!--<p class="icon">
 												<span><a href="https://www.netzerocheckout.com"><i class="icon-share3"></i></a></span>
 											</p>-->
-                                            </div>
                                         </div>
                                     </div>
-                            </a>
+                                </div>
+                                <!--</a>-->
                             </div>
 
                             <div id="open_database" class="col-md-6 animate-box" data-animate-effect="fadeInTop">
