--- a/index.html
+++ b/index.html
@@ -76,17 +76,19 @@
             cursor: default;
             color: #2c98f0 !important;
         }
-        
-        #netzero_box {
+        /* #netzero_box {
             display: none !important;
         }
         
         #netzero_world {
             display: none !important;
-        }
+        } */
     </style>
 
     <script>
+        document.getElementById("netzero_box").style.display = "none";
+        document.getElementById("netzero_world").style.display = "none";
+
         function clickStartupButton() {
             document.getElementById("startups-button").classList.add("active");
             document.getElementById("internships-button").classList.remove("active");
@@ -115,7 +117,7 @@
             document.getElementById("hackathons-button").classList.add("non-active");
             document.getElementById("projects-button").classList.add("non-active");
 
-            document.getElementById("netzero_box").style.display = "block !important";
+            document.getElementById("netzero_box").style.display = "inline";
             document.getElementById("carbonly_box").style.display = "none";
             document.getElementById("netzero_world").style.display = "inline";
             document.getElementById("open_database").style.display = "none";
