--- a/index.html
+++ b/index.html
@@ -84,6 +84,10 @@
         #netzero_world {
             display: none;
         }
+        
+        #connect_box {
+            display: none;
+        }
     </style>
 
     <script>
@@ -102,6 +106,7 @@
             document.getElementById("carbonly_box").style.display = "inline";
             document.getElementById("netzero_world").style.display = "none";
             document.getElementById("open_database").style.display = "inline";
+            document.getElementById("connect_box").style.display = "none";
         }
 
         function clickInternshipsButton() {
@@ -119,6 +124,7 @@
             document.getElementById("carbonly_box").style.display = "none";
             document.getElementById("netzero_world").style.display = "inline";
             document.getElementById("open_database").style.display = "none";
+            document.getElementById("connect_box").style.display = "inline";
         }
 
         function clickHackathonsButton() {
@@ -136,6 +142,7 @@
             document.getElementById("carbonly_box").style.display = "none";
             document.getElementById("netzero_world").style.display = "none";
             document.getElementById("open_database").style.display = "none";
+            document.getElementById("connect_box").style.display = "none";
         }
 
         function clickProjectsButton() {
@@ -153,6 +160,7 @@
             document.getElementById("carbonly_box").style.display = "none";
             document.getElementById("netzero_world").style.display = "none";
             document.getElementById("open_database").style.display = "none";
+            document.getElementById("connect_box").style.display = "none";
         }
     </script>
 
@@ -391,6 +399,29 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Olive
                                 <div class="desc">
                                     <div class="con">
                                         <h3><a href="https://www.carbonly.org">Carbonly</a></h3>
+                                        <span>Founder and CEO</span>
+                                        <div style="margin-top:45px; color:#fcfcfc; margin-bottom:25px;">
+                                            Entered The Pioneer.app Startup Accelerator <br/> Raised $12k in Funding From Fortum, Pioneer and Junction
+                                        </div>
+
+                                        <a href="https://www.carbonly.org" style="border: 3px solid #fff; padding:10px; margin-top:85px !important; color:#fcfcfc !important; cursor:pointer; font-weight:700;">Check it Out! >>><i class="fas fa-arrow-circle-right"></i></a>
+
+                                        <!--	<p class="icon">
+										<span><a href="https://www.carbonly.org"><i class="icon-share3"></i></a></span>
+
+									</p>-->
+                                        <!--	<span><a href="#"><i class="icon-eye"></i> 100</a></span>
+										<span><a href="#"><i class="icon-heart"></i> 49</a></span> -->
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div id="connect_box" class="col-md-6 animate-box" data-animate-effect="fadeInRight" style="border-radius:10px;">
+                            <div class="project" style="background-image: url(images/img-2.jpg); border-radius:10px;">
+                                <div class="desc">
+                                    <div class="con">
+                                        <h3><a href="https://www.carbonly.org">CONNECT EARTH</a></h3>
                                         <span>Founder and CEO</span>
                                         <div style="margin-top:45px; color:#fcfcfc; margin-bottom:25px;">
                                             Entered The Pioneer.app Startup Accelerator <br/> Raised $12k in Funding From Fortum, Pioneer and Junction
