--- a/index.html
+++ b/index.html
@@ -460,7 +460,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Olive
                             </div>
                         </div>
 
-                        <div class="row" style="border-radius:10px;">
+                        <div class="row">
                             <!---- <a href="https://app.netzero.world/checkout.html">-->
                             <div id="netzero_world" class="col-md-6 animate-box" data-animate-effect="fadeInLeft" style="border-radius:10px;">
                                 <div class="project" style="background-image: url(images/img-1.jpg); border-radius:10px;">
