--- a/index.html
+++ b/index.html
@@ -469,12 +469,12 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Olive
                                 <div class="desc">
                                     <div class="con">
                                         <h3><a href="https://www.carbonly.org">Hack Exeter</a></h3>
-                                        <span>Founder and CEO</span>
+                                        <span>Winner</span>
                                         <div style="margin-top:45px; color:#fcfcfc; margin-bottom:25px;">
-                                            Entered The Pioneer.app Startup Accelerator <br/> Raised $12k in Funding From Fortum, Pioneer and Junction
+                                            Received First Hackathon Award worth £1000 and full reimbursement to JunctionX Finland. <br/> Raised $12k in Funding From Fortum, Pioneer and Junction
                                         </div>
 
-                                        <a href="https://www.carbonly.org" style="border: 3px solid #fff; padding:10px; margin-top:85px !important; color:#fcfcfc !important; cursor:pointer; font-weight:700;">Check it Out! >>><i class="fas fa-arrow-circle-right"></i></a>
+                                        <a href="https://www.carbonly.org" style="border: 3px solid #fff; padding:10px; margin-top:85px !important; color:#fcfcfc !important; cursor:pointer; font-weight:700;">View on Figma >>><i class="fas fa-arrow-circle-right"></i></a>
 
                                         <!--	<p class="icon">
 										<span><a href="https://www.carbonly.org"><i class="icon-share3"></i></a></span>
@@ -511,13 +511,13 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Olive
                             <div class="project" style="background-image: url(images/img-4.jpg); border-radius:10px;">
                                 <div class="desc">
                                     <div class="con">
-                                        <h3><a href="https://netzero.world/">HACK NOTTINGHAM</a></h3>
-                                        <span>UX/UI Developer</span>
+                                        <h3><a href="https://devpost.com/software/carbonhood">HACK NOTTINGHAM</a></h3>
+                                        <span>Finalist</span>
                                         <div style="margin-top:45px; color:#fcfcfc; margin-bottom:45px;">
-                                            Designed Front-end for MVP And Created NetZero's Carbon Database <br/>
+                                            Earned First Capital One Award <br/>Developed the front-end for our web-app<br/>
                                         </div>
 
-                                        <a href="https://netzero.world/" style="border: 3px solid #fff; padding:10px; margin-top:85px !important; color:#fcfcfc !important; cursor:pointer; font-weight:700;">Check it Out! >>><i class="fas fa-arrow-circle-right"></i></a>
+                                        <a href="https://devpost.com/software/carbonhood" style="border: 3px solid #fff; padding:10px; margin-top:85px !important; color:#fcfcfc !important; cursor:pointer; font-weight:700;">Check it Out! >>><i class="fas fa-arrow-circle-right"></i></a>
                                         <!--	<p class="icon">
 										<span><a href="https://www.netzero.world"><i class="icon-share3"></i></a></span>
 
@@ -554,12 +554,12 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Olive
                                     <div class="desc">
                                         <div class="con">
                                             <h3><a href="https://app.netzero.world/checkout.html" style="text-transform:none">HACK THE CRISIS</a></h3>
-                                            <span>Co-Founder & Head of Product</span>
+                                            <span>Participant</span>
                                             <div style="margin-top:45px; color:#fcfcfc; margin-bottom:45px;">
-                                                Founded in October 2020 <br/> Currently Gathering Letters of Intent
+                                                Developed a web-app for tracking people with covid symptoms in the community.
                                             </div>
 
-                                            <a href="https://app.netzero.world/checkout.html" style="border: 3px solid #fff; padding:10px; margin-top:85px !important; color:#fcfcfc !important; cursor:pointer; font-weight:700;">Check it Out! >>><i class="fas fa-arrow-circle-right"></i></a>
+                                            <a href="https://app.netzero.world/checkout.html" style="border: 3px solid #fff; padding:10px; margin-top:85px !important; color:#fcfcfc !important; cursor:pointer; font-weight:700;">View on Figma >>><i class="fas fa-arrow-circle-right"></i></a>
                                             <!--<p class="icon">
 												<span><a href="https://www.netzerocheckout.com"><i class="icon-share3"></i></a></span>
 											</p>-->
