--- a/index.html
+++ b/index.html
@@ -373,6 +373,8 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Olive
                     </div>
                 </section>
 
+                <div style="margin-top:-30px; display:block; height:0px;"></div>
+
 
                 <!--<div id="colorlib-counter" class="colorlib-counters" style="background-image: url(images/cover_bg_1.jpg);" data-stellar-background-ratio="0.5">
                     <div class="overlay"></div>
