--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
             document.getElementById("netzero_world").style.display = "none";
             document.getElementById("open_database").style.display = "inline";
             document.getElementById("connect_box").style.display = "none";
-            document.getElementById("hack_exter").style.display = "none";
+            document.getElementById("hack_exeter").style.display = "none";
             document.getElementById("hack_nottingham").style.display = "none";
             document.getElementById("hack_the_crisis").style.display = "none";
         }
@@ -140,7 +140,7 @@
             document.getElementById("netzero_world").style.display = "inline";
             document.getElementById("open_database").style.display = "none";
             document.getElementById("connect_box").style.display = "inline";
-            document.getElementById("hack_exter").style.display = "none";
+            document.getElementById("hack_exeter").style.display = "none";
             document.getElementById("hack_nottingham").style.display = "none";
             document.getElementById("hack_the_crisis").style.display = "none";
         }
@@ -161,7 +161,7 @@
             document.getElementById("netzero_world").style.display = "none";
             document.getElementById("open_database").style.display = "none";
             document.getElementById("connect_box").style.display = "none";
-            document.getElementById("hack_exter").style.display = "inline";
+            document.getElementById("hack_exeter").style.display = "inline";
             document.getElementById("hack_nottingham").style.display = "inline";
             document.getElementById("hack_the_crisis").style.display = "inline";
         }
@@ -182,7 +182,7 @@
             document.getElementById("netzero_world").style.display = "none";
             document.getElementById("open_database").style.display = "none";
             document.getElementById("connect_box").style.display = "none";
-            document.getElementById("hack_exter").style.display = "none";
+            document.getElementById("hack_exeter").style.display = "none";
             document.getElementById("hack_nottingham").style.display = "none";
             document.getElementById("hack_the_crisis").style.display = "none";
         }
