--- a/index.html
+++ b/index.html
@@ -447,9 +447,9 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Olive
                                 <div class="desc">
                                     <div class="con">
                                         <h3><a href="https://www.carbonly.org">CONNECT EARTH</a></h3>
-                                        <span>Founder and CEO</span>
+                                        <span>Paid Summer Software Engineer Intern</span>
                                         <div style="margin-top:45px; color:#fcfcfc; margin-bottom:25px;">
-                                            Entered The Pioneer.app Startup Accelerator <br/> Raised $12k in Funding From Fortum, Pioneer and Junction
+                                            ...
                                         </div>
 
                                         <a href="https://www.carbonly.org" style="border: 3px solid #fff; padding:10px; margin-top:85px !important; color:#fcfcfc !important; cursor:pointer; font-weight:700;">Check it Out! >>><i class="fas fa-arrow-circle-right"></i></a>
