--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
             document.getElementById("netzero_box").style.display = "none";
             document.getElementById("carbonly_box").style.display = "inline";
             document.getElementById("netzero_world").style.display = "none";
-            document.getElementById("open_database").style.display = "inline";
+            document.getElementById("open_database").style.display = "none";
             document.getElementById("connect_box").style.display = "none";
             document.getElementById("hack_exeter").style.display = "none";
             document.getElementById("hack_nottingham").style.display = "none";
@@ -137,7 +137,7 @@
 
             document.getElementById("netzero_box").style.display = "inline";
             document.getElementById("carbonly_box").style.display = "none";
-            document.getElementById("netzero_world").style.display = "inline";
+            document.getElementById("netzero_world").style.display = "none";
             document.getElementById("open_database").style.display = "none";
             document.getElementById("connect_box").style.display = "inline";
             document.getElementById("hack_exeter").style.display = "none";
@@ -179,8 +179,8 @@
 
             document.getElementById("netzero_box").style.display = "none";
             document.getElementById("carbonly_box").style.display = "none";
-            document.getElementById("netzero_world").style.display = "none";
-            document.getElementById("open_database").style.display = "none";
+            document.getElementById("netzero_world").style.display = "inline";
+            document.getElementById("open_database").style.display = "inline";
             document.getElementById("connect_box").style.display = "none";
             document.getElementById("hack_exeter").style.display = "none";
             document.getElementById("hack_nottingham").style.display = "none";
@@ -449,7 +449,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Olive
                                         <h3><a href="https://www.carbonly.org">CONNECT EARTH</a></h3>
                                         <span>Paid Summer Software Engineer Intern</span>
                                         <div style="margin-top:45px; color:#fcfcfc; margin-bottom:25px;">
-                                            ...
+                                            Worked in a team of four to automate Connect Earth's data gathering.
                                         </div>
 
                                         <a href="https://www.carbonly.org" style="border: 3px solid #fff; padding:10px; margin-top:85px !important; color:#fcfcfc !important; cursor:pointer; font-weight:700;">Check it Out! >>><i class="fas fa-arrow-circle-right"></i></a>
@@ -537,7 +537,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Olive
                                             <h3><a href="https://app.netzero.world/checkout.html" style="text-transform:none">NETZERO CHECKOUT</a></h3>
                                             <span>Co-Founder & Head of Product</span>
                                             <div style="margin-top:45px; color:#fcfcfc; margin-bottom:45px;">
-                                                Founded in October 2020 <br/> Currently Gathering Letters of Intent
+                                                Founded in October 2020 <br/> Designed the mock-ups for the Shopify App.
                                             </div>
 
                                             <a href="https://app.netzero.world/checkout.html" style="border: 3px solid #fff; padding:10px; margin-top:85px !important; color:#fcfcfc !important; cursor:pointer; font-weight:700;">Check it Out! >>><i class="fas fa-arrow-circle-right"></i></a>
