--- a/index.html
+++ b/index.html
@@ -465,6 +465,29 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Olive
                             </div>
                         </div>
 
+                        <div id="novaterra_box" class="col-md-6 animate-box" data-animate-effect="fadeInRight" style="border-radius:10px;">
+                            <div class="project" style="background-image: url(images/img-2.jpg); border-radius:10px;">
+                                <div class="desc">
+                                    <div class="con">
+                                        <h3><a href="https://www.carbonly.org">NOVATERRA</a></h3>
+                                        <span>Founder</span>
+                                        <div style="margin-top:45px; color:#fcfcfc; margin-bottom:25px;">
+                                            Built a fully-functional, environmental social-media platform at 16.
+                                        </div>
+
+                                        <a href="https://www.carbonly.org" style="border: 3px solid #fff; padding:10px; margin-top:85px !important; color:#fcfcfc !important; cursor:pointer; font-weight:700;">View on Figma >>><i class="fas fa-arrow-circle-right"></i></a>
+
+                                        <!--	<p class="icon">
+										<span><a href="https://www.carbonly.org"><i class="icon-share3"></i></a></span>
+
+									</p>-->
+                                        <!--	<span><a href="#"><i class="icon-eye"></i> 100</a></span>
+										<span><a href="#"><i class="icon-heart"></i> 49</a></span> -->
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
                         <div id="hack_exeter" class="col-md-6 animate-box" data-animate-effect="fadeInRight" style="border-radius:10px;">
                             <div class="project" style="background-image: url(images/img-2.jpg); border-radius:10px;">
                                 <div class="desc">
