--- a/index.html
+++ b/index.html
@@ -313,8 +313,8 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Olive
                                     <div class="col-md-4 text-center animate-box">
                                         <div class="services color-2">
                                             <span class="icon">
-									<i class="icon-data"></i>
-								</span>
+												<i class="icon-phone3"></i>
+                                            </span>
                                             <div class="desc">
                                                 <h3>UI Design</h3>
                                                 <p>I've become skilled using a range of CSS libraries and web design tools like Invision and Figma.</p>
@@ -324,7 +324,8 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Olive
                                     <div class="col-md-4 text-center animate-box">
                                         <div class="services color-5">
                                             <span class="icon">
-									<i class="icon-phone3"></i>
+												<i class="icon-bulb"></i>
+									
 								</span>
                                             <div class="desc">
                                                 <h3>Python</h3>
