--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
     <meta property='og:url' content='https://www.olivercarmont.com' />
 
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
-    <link rel="shortcut icon" href="favicon.ico">
+    <link rel="shortcut icon" href="images/favicon.ico">
 
-    <link rel="icon" href="favicon.ico">
+    <link rel="icon" type="image/x-icon" href="images/favicon.ico">
 
     <link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,400i,700" rel="stylesheet">
@@ -300,7 +300,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Olive
 
                                 <div class="row row-pt-md">
                                     <div class="col-md-4 text-center animate-box">
-                                        <div class="services color-1">
+                                        <div class="services color-5">
                                             <span class="icon">
 									<i class="icon-bulb"></i>
 								</span>
@@ -322,7 +322,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Olive
                                         </div>
                                     </div>
                                     <div class="col-md-4 text-center animate-box">
-                                        <div class="services color-5">
+                                        <div class="services color-1">
                                             <span class="icon">
 												<i class="icon-bulb"></i>
 									
@@ -604,7 +604,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Olive
                                                 Founded in August 2020 <br/>Over 450 Rows of Data Added
                                             </div>
 
-                                            <a href="http://www.opendatabase.io/landing" style="border: 3px solid #fff; padding:10px; margin-top:85px !important; color:#fcfcfc !important; cursor:pointer; font-weight:700;">Check it Out! >>><i class="fas fa-arrow-circle-right"></i></a>
+                                            <a style="border: 3px solid #fff; padding:10px; margin-top:85px !important; color:#fcfcfc !important; cursor:default; font-weight:700;">No Longer Available :(<i class="fas fa-arrow-circle-right"></i></a>
 
                                             <!--	<p class="icon">
 												<span><a href="https://www.opendatabase.io"><i class="icon-share3"></i></a></span>
@@ -1077,4 +1077,4 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Olive
 
 </body>
 
-</html>
+</html>F
