--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Olive
                                     <div class="col-md-4 text-center animate-box">
                                         <div class="services color-5">
                                             <span class="icon">
-									<i class="icon-bulb"></i>
+												<i class="icon-layers2"></i>
 								</span>
                                             <div class="desc">
                                                 <h3>Full-Stack</h3>
