--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
     <meta property='og:url' content='https://www.olivercarmont.com' />
 
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
-    <link rel="shortcut icon" href="images/favicon.ico">
+    <link rel="shortcut icon" href="images/favicon.png">
 
-    <link rel="icon" type="image/x-icon" href="images/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="images/favicon.png">
 
     <link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,400i,700" rel="stylesheet">
@@ -196,7 +196,7 @@
             <a href="#" class="js-colorlib-nav-toggle colorlib-nav-toggle" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar"><i></i></a>
             <aside id="colorlib-aside" role="complementary" class="border js-fullheight">
                 <div class="text-center">
-                    <div class="author-img" style="background-image: url(images/about.jpg);"></div>
+                    <div class="author-img" style="background-image: url(images/about.jpeg);"></div>
                     <h1 id="colorlib-logo"><a href="index.html">Oliver Carmont</a></h1>
                     <span class="position"><a href="#">Full-Stack Developer</a> in Berkeley</span>
                 </div>
@@ -989,7 +989,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Olive
                                         <i class="icon-phone"></i>
                                     </div>
                                     <div class="colorlib-text">
-                                        <p>
+                                        <p>+1 510 501 4802
                                             <a href="tel://"></a>
                                         </p>
                                     </div>
