--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Olive
                                             <div class="slider-text-inner js-fullheight">
                                                 <div class="desc">
                                                     <h1 style="color:#fff">Hi! <br>I'm Oliver</h1>
-                                                    <h2 style="color:#fff">A UI/UX Designer in Berkeley</h2>
+                                                    <h2 style="color:#fff">A Full-Stack Developer in Berkeley</h2>
                                                     <!-- <p><a class="btn btn-primary btn-learn">Download CV <i class="icon-download4"></i></a></p> -->
                                                     <p><a href="#work" class="btn btn-primary btn-learn" style="color:#fff; border-color:#fff">View Projects <i class="icon-briefcase3"></i></a></p>
                                                 </div>
@@ -268,7 +268,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Olive
                                         <div class="col-md-6 col-md-offset-3 col-md-pull-3 col-sm-12 col-xs-12 js-fullheight slider-text">
                                             <div class="slider-text-inner">
                                                 <div class="desc">
-                                                    <h1 style="color:#fff;">I'm <br>a Pioneer</h1>
+                                                    <h1 style="color:#fff;">I'm <br>an Environmentalist</h1>
                                                     <h2 style="color:#fff;">I've Worked With 3 Social Startups Fighting For a Better Future</h2>
                                                     <p><a href="#work" class="btn btn-primary btn-learn" style="color:#fff; border-color:#fff">View Projects <i class="icon-briefcase3"></i></a></p>
                                                 </div>
