--- a/index.html
+++ b/index.html
@@ -444,7 +444,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Olive
                         </div>
 
                         <div id="connect_box" class="col-md-6 animate-box" data-animate-effect="fadeInRight" style="border-radius:10px;">
-                            <div class="project" style="background-image: url(images/img-2.jpg); border-radius:10px;">
+                            <div class="project" style="background-image: url(images/connect.png); border-radius:10px;">
                                 <div class="desc">
                                     <div class="con">
                                         <h3><a href="https://www.carbonly.org">CONNECT EARTH</a></h3>
@@ -467,7 +467,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Olive
                         </div>
 
                         <div id="novaterra_box" class="col-md-6 animate-box" data-animate-effect="fadeInRight" style="border-radius:10px;">
-                            <div class="project" style="background-image: url(images/img-2.jpg); border-radius:10px;">
+                            <div class="project" style="background-image: url(images/novaterra.jpg); border-radius:10px;">
                                 <div class="desc">
                                     <div class="con">
                                         <h3><a href="https://www.carbonly.org">NOVATERRA</a></h3>
